development/40-payment-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
  namespace: astrolumina-dev
  labels:
    app.kubernetes.io/name: payment-api
    app.kubernetes.io/part-of: astrolumina
    app.kubernetes.io/component: payment-api
    environment: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: payment-api
      app.kubernetes.io/component: payment-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: payment-api
        app.kubernetes.io/part-of: astrolumina
        app.kubernetes.io/component: payment-api
        environment: development
    spec:
      containers:
        - name: payment-api
          image: ghcr.io/astrolumina-by-carmen-ilie/astrolumina-paymentapi:2.0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3032
              protocol: TCP
          resources:
            requests:
              cpu: 125m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 2
      restartPolicy: Always
