development/31-booking-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-api
  namespace: astrolumina-dev
  labels:
    app.kubernetes.io/name: booking-api
    app.kubernetes.io/part-of: astrolumina
    app.kubernetes.io/component: booking-api
    environment: development
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3033
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: booking-api
    app.kubernetes.io/component: booking-api
